--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+/.idea/*.xml
+.DS_Store
+build/
+/captures
+/.idea/gradle.xml
+/.idea/vcs.xml
 # Built application files
 *.apk
 *.ap_
